--- a/app/src/main/res/layout/l_item.xml
+++ b/app/src/main/res/layout/l_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/tvText">
-
-</TextView>
+    android:id="@+id/tvText"
+    android:paddingHorizontal="@dimen/mat16"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
